<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.it2_project.SurveyController2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Q21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q21"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupQ21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q21">

                <RadioButton
                    android:id="@+id/Q21_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전혀 그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q21_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q21_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇다" />

                <RadioButton
                    android:id="@+id/Q21_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매우 그렇다" />

            </RadioGroup>

            <TextView
                android:id="@+id/Q22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup11"
                android:text="@string/Q22"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupQ22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q22">

                <RadioButton
                    android:id="@+id/Q22_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전혀 그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q22_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q22_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇다" />

                <RadioButton
                    android:id="@+id/Q22_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매우 그렇다" />

            </RadioGroup>

            <TextView
                android:id="@+id/Q23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup22"
                android:text="@string/Q23"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupQ23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q23">

                <RadioButton
                    android:id="@+id/Q23_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전혀 그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q23_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q23_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇다" />

                <RadioButton
                    android:id="@+id/Q23_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매우 그렇다" />

            </RadioGroup>

            <TextView
                android:id="@+id/Q24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup13"
                android:text="@string/Q24"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupQ24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q24">

                <RadioButton
                    android:id="@+id/Q24_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전혀 그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q24_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q24_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇다" />

                <RadioButton
                    android:id="@+id/Q24_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매우 그렇다" />
            </RadioGroup>
            <TextView
                android:id="@+id/Q25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup14"
                android:text="@string/Q25"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupQ25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q15">

                <RadioButton
                    android:id="@+id/Q25_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전혀 그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q25_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q25_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇다" />

                <RadioButton
                    android:id="@+id/Q25_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매우 그렇다" />

            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/Q26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q26"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupQ26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Q26">

                <RadioButton
                    android:id="@+id/Q26_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전혀 그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q26_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q26_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇다" />

                <RadioButton
                    android:id="@+id/Q26_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매우 그렇다" />

            </RadioGroup>

            <TextView
                android:id="@+id/Q27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup16"
                android:text="@string/Q27"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupQ27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q17">

                <RadioButton
                    android:id="@+id/Q27_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전혀 그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q27_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q27_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇다" />

                <RadioButton
                    android:id="@+id/Q27_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매우 그렇다" />

            </RadioGroup>

            <TextView
                android:id="@+id/Q28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup17"
                android:text="@string/Q28"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupQ28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q18">

                <RadioButton
                    android:id="@+id/Q28_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전혀 그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q28_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q28_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇다" />

                <RadioButton
                    android:id="@+id/Q28_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매우 그렇다" />

            </RadioGroup>

            <TextView
                android:id="@+id/Q29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup18"
                android:text="@string/Q29"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupQ29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q29">

                <RadioButton
                    android:id="@+id/Q29_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전혀 그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q29_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q29_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇다" />

                <RadioButton
                    android:id="@+id/Q29_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매우 그렇다" />

            </RadioGroup>


            <TextView
                android:id="@+id/Q30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup19"
                android:text="@string/Q30"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupQ30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q30">

                <RadioButton
                    android:id="@+id/Q30_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전혀 그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q30_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇지 않다" />

                <RadioButton
                    android:id="@+id/Q30_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="그렇다" />

                <RadioButton
                    android:id="@+id/Q30_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="매우 그렇다" />

            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="FINISH"
                android:id="@+id/FINISH"
                android:layout_gravity="right"/>


        </LinearLayout>


    </LinearLayout>



</ScrollView>
